# RayTracingInOneWeekend.c

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  color.c  color.h  hittable.c  hittable.h  main.c  ray.c  ray.h  scatter.c  scene.c  scene.h  utils.c  utils.h  vec3.c  vec3.h
src/: camera.c  camera.h  color.h  main.c  ray.c  ray.h  scatter.c  scatter.h  scene.c  utils.c  utils.h  vec3.c  vec3.h
